# MLCTestlab

./: README.md
einsum_trees/: .gitignore  CMakeLists.txt  kernels.cpp  kernels.h  ops.cpp  ops.h  ops_benchmarks.cpp  ops_tests.cpp  ref_ops.py
teir_opt/: .gitignore  CMakeLists.txt  README.md  benchmarks.cpp  kernels.cpp  kernels.h  opts.cpp  opts.h  tests.cpp
